# hippolens

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
.cursor/rules/: uv.mdc
docs/: EXECUTION.md  PLAN.md
examples/: demo_config.py  demo_corpus.json  index_corpus.py
hippolens/: __init__.py  cli.py  graph_export.py  layout.py  lens.py  models.py  path_highlight.py  style.py
hippolens/app/: main.py
hippolens/app/components/: graph.py  rank_panel.py
tests/: conftest.py  test_lens_core.py
